--- a/source/_posts/传输层知识点.md
+++ b/source/_posts/传输层知识点.md
@@ -3,8 +3,8 @@ title: TCP、UDP知识点
 publish: true
 description: 记录了一些TCP、UDP知识点
 date: 2024-09-14 18:29:00
-tag: 计算机网络
-sticky: 2
+tags:
+  - 计算机网络
 ---
 
 # TCP、UDP
