--- a/source/_posts/优质开源软件合集.md
+++ b/source/_posts/优质开源软件合集.md
@@ -2,9 +2,10 @@
 title: 优质资源合集
 publish: true
 description: 收藏一些优质资源
-tag: 
-- 开源工具
-- 资源
+tags:
+  - 开源工具
+  - 资源
+date: 2025-01-10
 ---
 
 # 优质资源合集
