--- a/source/_posts/interview experience/记录一些琐碎.md
+++ b/source/_posts/interview experience/记录一些琐碎.md
@@ -2,5 +2,14 @@
 published: "false"
 ---
 ## 投递记录
-- 小红书——后端开发实习生——2025 年 2 月 5 日——[链接](https://job.xiaohongshu.com/campus/record)
-- 
+- 小红书——后端开发实习生——2025 年 2 月 5 日——[查看进度](https://job.xiaohongshu.com/campus/record)
+- 美团——后端开发工程师——2025 年 2 月 5 日——[查看进度](https://zhaopin.meituan.com/web/personalCenter/deliveryRecord)
+- 京东——后端开发工程师——2025 年 2 月 5 日——[查看进度](https://campus.jd.com/#/myDeliver?type=present)
+
+## 信息填写
+- 学校：大连理工大学
+- 身份证：360722200311211257
+- QQ 邮箱： 2230561977@qq.com
+- 手机号码：17870189780
+- 微信号：lyydsheep
+- 房园 18842686937
