fix: Replace external images with local versions in CQRS post

--- a/source/_posts/场景积累.md
+++ b/source/_posts/场景积累.md
@@ -54,9 +54,7 @@ title: 场景积累
 
 CQRS （command query responsibility segregation）模式：是一种将数据的读取操作与更新操作分离的模式。
 
-![](https://cdn.nlark.com/yuque/0/2025/png/36232735/1758720984962-86855ebf-d5df-4b68-a1fe-5ea15bdca742.png)
-
+![img.png](../../images/img.png)
 下面是在一个多表关联查询场景使用 CQRS 模式的例子：
 
-![](https://cdn.nlark.com/yuque/0/2025/png/36232735/1758721355686-457bc1ec-ee4e-45aa-884f-da6ad35c2696.png)
-
+![img_1.png](../../images/img_1.png)
