feat: Add TCC transaction framework roles and analysis

--- a/source/_posts/分布式事务技术实现原理.md
+++ b/source/_posts/分布式事务技术实现原理.md
@@ -71,3 +71,29 @@ title: 分布式事务
 + 流程高度抽象：事务消息方案通过将分布式事务概括为**本地事务 + 消息投递**两个动作。实际上一个分布式事务中可能会涉及很多操作流程，笼统的概括为本地事务 + 消息投递，可能会导致大量繁重的操作被聚焦在本地事务中，会给 producer 带来极大的压力。
 
 ## TCC
+在 TCC 分布式事务框架中，主要有三类角色：
+
++ 应用方 Application
+  - 指的是需要使用 TCC 分布式事务框架的应用方
++ 事务协调器 TX Manager
+  - 负责统筹分布式事务的执行
+  - 实现TCC Component 的注册管理
+  - 负责和 Application 交互，提供分布式事务的创建入口，基于 Application 事务执行结果的响应
+  - 串联 Try -> Confirm / Cancel 的两阶段流程。在第一阶段中批量调用 Try 接口，在第二阶段中批量调用 Confirm/Cancel 接口
++ TCC 组件 TCC Component
+  - 指的是在分布式事务中需要完成特定操作的子模块。这个模块通常负责一些状态数据的维护和更新操作，需要对外暴露出 Try、Confirm和 Cancel 三个接口
+  - Try：锁定资源，通常类似于**冻结**的语义，保留后续变化的可能性
+  - Confirm：对 Try 操作进行**二次确认**，将记录中的**冻结状态修改为成功状态**
+  - Cancel：对 Try 操作继续**回滚**，将记录中的**冻结**状态**消除或修改为失败状态**，将底层对应的数据状态进行**回滚**
+
+****
+
+**优势：**
+
++ 任意一个 Component 的 Try 操作失败了，都能对整体进行回滚
++ TX Manager 已经通过 Try 操作，让 Component 提前锁定了对应的资源，因此确保了资源是充足的，且由于提前执行了状态锁定，因此发生并发问题的概率更小
+
+**缺点**：
+
++ 实现成本很高
++ 数据状态只能趋于最终一致性，无法做到即时一致性
