feat: Add comb mod 10 implementation for non-prime modulus

--- a/source/_posts/模运算.md
+++ b/source/_posts/模运算.md
@@ -82,6 +82,76 @@ func comb(n, m int) int {
 }
 ```
 
+
+
+## 组合模 10
+最近刷到一些题目考察组合数模 10，由于 10 并不是质数，因此不能使用费马小定理计算逆元。需要采用其他方式计算模 10 情况下的阶乘逆元。
+
+核心思想：计算`n`的逆元，将`n`转换为`n' * 2^q * 5^p`，于是有`n^-1  =  n'^-1 * 2^-q * 5^-p`。因为`n'`和 10 互质，即`gcd(n', 10) = 1`，所以可以通过欧拉定理计算`n'^-1`。
+
+```go
+const MOD = 10
+const mx = 1_000_01 // 最大值
+
+var fac[mx] int // 阶乘
+var invF[mx] int // 阶乘的逆元 invF[i] = invF[i+1] * (i + 1) 
+var p2[mx] int // 记录 2 的幂次
+var p5[mx] int // 记录 5 的幂次
+
+func init() {
+	fac[0] = 1
+	for i := 1; i < mx; i++ {
+        e2 := bits.TrailingZeros(uint(i)) 
+        x := i >> e2
+
+        e5 := 0
+        for x % 5 == 0 {
+            e5++ 
+            x /= 5
+        }
+
+		fac[i] = x * fac[i-1] % MOD
+        p2[i] = p2[i-1] + e2 
+        p5[i] = p5[i-1] + e5 
+	}
+
+	invF[mx-1] = power(fac[mx-1], 3) // 使用欧拉定理计算-1 次方（逆元）
+	for i := mx-1; i > 0; i-- {
+        e2 := bits.TrailingZeros(uint(i)) 
+        x := i >> e2
+
+        e5 := 0
+        for x % 5 == 0 {
+            e5++ 
+            x /= 5
+        }
+
+		invF[i-1] = invF[i] * x % MOD
+	}
+}
+
+func power(b, q int) int {
+	res := 1
+	for ;q > 0; q /= 2 {
+		if q & 1 == 1 {
+			res = res * b % MOD
+		}
+		b = b * b % MOD
+	}
+	return res
+}
+
+// 从 n 中选取 m 的方案数
+func comb(n, m int) int {
+	if m < 0 || m > n {
+		return 0
+	}
+
+    // n! * (m!)^-1 * ((n - m)!)^-1
+	return fac[n] * invF[m] % MOD * invF[n - m] % MOD * power(2, p2[n] - p2[m] - p2[n - m]) % MOD * power(5, p5[n] - p5[m] - p5[n - m]) % MOD 
+}
+```
+
 ## 总结
 ```go
 const MOD = 1_000_000_007
